fix: auction home page lots (gap)

--- a/src/Auctionify.API/ClientApp/src/app/components/general/home/auction/auction.component.scss
+++ b/src/Auctionify.API/ClientApp/src/app/components/general/home/auction/auction.component.scss
@@ -36,7 +36,7 @@
 
     &__filter-btn:hover {
         border: none;
-        background-color: #2B5293;
+        background-color: #2b5293;
         transition: 0.5s ease;
         color: white;
     }
@@ -54,11 +54,11 @@
     }
 
     &__auction-active {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(249px, 290px));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
         padding-bottom: 20px;
-        gap: 13px;
-        justify-content: space-between;
+        gap: 8px;
     }
 
     &__btn {
@@ -74,7 +74,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-        gap: 13px;
+        gap: 8px;
         padding-bottom: 20px;
     }
 
@@ -90,7 +90,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-        gap: 13px;
+        gap: 8px;
         padding-bottom: 20px;
     }
 
@@ -129,7 +129,7 @@
     }
 
     &__like-btn {
-        background-color: #F0F3FE;
+        background-color: #f0f3fe;
         border: none;
         border-radius: 50%;
         width: 48px;
@@ -182,6 +182,6 @@
     }
 
     &__title a:hover {
-        color: #2B5293;
+        color: #2b5293;
     }
 }
